// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-LoadingIcon"
  style={
    Object {
      "animationDuration": "1.25s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "1.25s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-LoadingIcon"
  style={
    Object {
      "animationDuration": "4s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "4s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-LoadingIcon"
  style={
    Object {
      "animationDuration": "0.75s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "0.75s",
      }
    }
  />
</Icon>
`;
